--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "socket": "tsx --env-file=.env.local src/socket-server.ts",
     "scira-socket": "tsx --env-file=.env.local src/scira-socket.ts",
     "docker": "tsx src/run.ts",
+    "docker_socket": "node_modules/.bin/tsx src/socket-server.ts",
+    "docker_scira_socket": "node_modules/.bin/tsx src/scira-socket.ts",
+    "docker_sockets:both": "npm run docker_socket & npm run docker_scira_socket",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -33,6 +36,7 @@
     "ai": "^4.1.17",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "fflate": "^0.8.2",
     "js-tiktoken": "^1.0.17",
     "lodash-es": "^4.17.21",
     "p-limit": "^6.2.0",
