--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsdom": "^21.1.7",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.13.0",
     "@types/uuid": "^9.0.8",
@@ -33,13 +34,16 @@
     "@ai-sdk/fireworks": "^0.1.14",
     "@ai-sdk/openai": "^1.1.9",
     "@mendable/firecrawl-js": "^1.16.0",
+    "@mozilla/readability": "^0.6.0",
     "ai": "^4.1.17",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "fflate": "^0.8.2",
     "js-tiktoken": "^1.0.17",
+    "jsdom": "^26.0.0",
     "lodash-es": "^4.17.21",
     "p-limit": "^6.2.0",
+    "playwright": "^1.51.1",
     "socket.io": "^4.8.1",
     "uuid": "^9.0.1",
     "zod": "^3.24.1"
